# photofield

./: .air.conf  .air.toml  .changie.yaml  .dockerignore  .env.development  .gitignore  .golangci.yml  .goreleaser.yml  .realize.yaml  ANALYSIS_SUMMARY.md  CHANGELOG.md  Dockerfile  Dockerfile-goreleaser  Dockerfile-multiarch  IMPROVEMENT_ROADMAP.md  LICENSE  Makefile  PIPELINE_DESIGN.md  README.md  RELEASE_CHECKLIST.md  SPLIT_PLAN.md  Taskfile.yml  api.yaml  app.go  config.go  configuration.docker.yaml  configuration.yaml  defaults.yaml  deploy.ps1  docker-compose.yaml  embed-docs-stub.go  embed-docs.go  embed-geo-stub.go  embed-geo.go  embed-ui-stub.go  embed-ui.go  filename_search_test.go  go.mod  go.sum  io_test.go  (+27 more)
.changes/: header.tpl.md  v0.17.1.md  v0.18.0.md  v0.19.0.md  v0.20.0.md  v0.21.0.md  v0.21.1.md  v0.22.0.md  v0.23.0.md  v0.24.0.md
.github/: copilot-instructions.md
docs/: configuration.md  contributing.md  credits.md  dependencies.md  development.md  getting-started.md  index.md  license.md  maintenance.md  package-lock.json  package.json  performance.md  quick-start.md  usage.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
ffmpeg/: ffmpeg.go
fs/: hash.go  hash_test.go  watch.go
internal/: metrics.go  types.go  utils.go
io/: io.go
rangetree/: rangetree.go
search/: query.go  query_test.go  sql.go
src/: decoder.go
static/: index.html  manifest.json
tag/: config.go  selection.go  tag.go
tests/: connection-error.feature  first-run.feature  fixtures.ts  rescan.feature  steps.ts
tools/: go.mod  (+3 more)
(+427 files in other folders)
